fix(clay-css): Aspect Ratio `.aspect-ratio-item` should be aligned to the left when parent container has `text-align: center`
issue #833

--- a/packages/clay-css/src/scss/components/_aspect-ratio.scss
+++ b/packages/clay-css/src/scss/components/_aspect-ratio.scss
@@ -13,6 +13,7 @@
 // Aspect Ratio Item
 
 %aspect-ratio-item {
+	left: 0;
 	position: absolute;
 	word-wrap: break-word;
 }
